feat: cdn link added
http://servicesforvscode.000webhostapp.com/handler.js

the link is available at my deepp0707 acc

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"commands": [
 			{
 				"command": "extension.stack",
-				"key": "ctrl+o s"
+				"key": "ctrl+alt+d",
+				"title": "open stackview"
 			},
 			{
 				"command": "extension.stack",
